--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 
             <div class="service-card">
                 <div class="service-img-container">
-                    <img src="images/service img" alt="Product" class="service-img" />
+                    <img src="images/servuiceimg.jpg" alt="Product" class="service-img" />
                     <span class="service-icon">
                         <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
                             fill="#1f1f1f">
